--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/articles-style.css">
     <link rel="stylesheet" href="../css/portfolio-style.css">
+    <script src="../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../script/menu.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -28,9 +29,9 @@
     <header>
         <div id="top-bar">
             <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" id="capytech-icon"></a>
-            <button class="hamburger-menu">&#9776;</button>
+            <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
         </div>
-        <nav>
+        <nav id="main-nav">
             <ul id="nav-ul">
                 <li class="nav-li"><a class="nav-link" href="../html/index.html">Home</a></li>
                 <li class="nav-li"><a class="nav-link" href="../html/portfolio/index.html">Portfolio</a></li>
@@ -96,6 +97,17 @@
                         <figcaption>
                             <h3>JavaScript RPG</h3>
                             <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
+                    <a href="./portfolio/portfolio7.html">
+                        <figure>
+                            <img src="./image/game-design1-1.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>JavaScript Smup</h3>
+                            <p>Click here to play! This project is a JavaScript Smup game I recently completed.</p>
                         </figcaption>
                     </a>
                 </article>
