--- a/html/portfolio/portfolio6.html
+++ b/html/portfolio/portfolio6.html
@@ -12,9 +12,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
-    <script src="../../script/jquery-3.7.0.min.js"></script>
-    <script src="../../script/gsap.js"></script>
+    <link rel="stylesheet" href="../../css/red-knight.css">
+    <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
+    <script src="../../script/gsap.js" defer="defer"></script>
     <script src="../../script/red_knight.js" defer=defer></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -31,9 +32,9 @@
             <div id="top-bar">
                 <a href="../../html/index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         id="capytech-icon"></a>
-                <button class="hamburger-menu">&#9776;</button>
+                <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
             </div>
-            <nav>
+            <nav id="main-nav">
                 <ul id="nav-ul">
                     <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
