--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -12,6 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
+    <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -28,9 +29,9 @@
             <div id="top-bar">
                 <a href="../../html/index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         id="capytech-icon"></a>
-                <button class="hamburger-menu">&#9776;</button>
+                <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
             </div>
-            <nav>
+            <nav id="main-nav">
                 <ul id="nav-ul">
                     <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
@@ -55,6 +56,19 @@
                             </figure>
                             <figcaption>
                                 <h3>JavaScript RPG</h3>
+                                <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
+
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="./portfolio7.html">
+                            <figure>
+                                <img src="../image/game-design1-1.jpg" alt="Banking System Prototype II"
+                                    class="portfolio-img">
+                            </figure>
+                            <figcaption>
+                                <h3>JavaScript Smup</h3>
                                 <p>Click here to play! This project is a JavaScript RPG game I recently completed.</p>
 
                             </figcaption>
