--- a/html/index.html
+++ b/html/index.html
@@ -112,6 +112,17 @@
                     </a>
                 </article>
                 <article>
+                    <a href="./portfolio/portfolio8.html">
+                        <figure>
+                            <img src="./image/platform_game.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>JavaScript Platform</h3>
+                            <p>Click here to play! This project is a JavaScript platform game I recently completed.</p>
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
                     <a href="./portfolio/portfolio1.html">
                         <figure>
                             <img src="./image/banking-sys-python.jpg" alt="Banking System Prototype II"
