--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -75,6 +75,18 @@
                         </a>
                     </article>
                     <article>
+                        <a href="./portfolio8.html">
+                            <figure>
+                                <img src="../image/platform_game.jpg" alt="Banking System Prototype II"
+                                    class="portfolio-img">
+                            </figure>
+                            <figcaption>
+                                <h3>JavaScript Smup</h3>
+                                <p>Click here to play! This project is a JavaScript platform game I recently completed.</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article>
                         <a href="./portfolio1.html">
                             <figure>
                                 <img src="../image/banking-sys-python.jpg" alt="Banking System Prototype II"
