--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -81,7 +81,7 @@
                                     class="portfolio-img">
                             </figure>
                             <figcaption>
-                                <h3>JavaScript Smup</h3>
+                                <h3>JavaScript Platform</h3>
                                 <p>Click here to play! This project is a JavaScript platform game I recently completed.</p>
                             </figcaption>
                         </a>
