--- a/html/portfolio/portfolio7.html
+++ b/html/portfolio/portfolio7.html
@@ -72,7 +72,15 @@
                 </div> <!--end div ui-->
                 <h3>Instructions:</h3>
                 <p>Use <strong>WASD or the four buttons above</strong> to move the yellow spacecraft. Use
-                    <strong>L</strong> to <strong>shoot lasers</strong>.</p>
+                    <strong>L</strong> to <strong>shoot lasers</strong>.
+                </p>
+                <h4>Sprites credits to (sources):</h4>
+                <ul>
+                    <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"
+                            target="_blank">Spaceships</a>
+                    </li>
+                    <li><a href="https://www.pexels.com/photo/stars-1257860/" target="_blank">Background</a></li>
+                </ul>
         </main>
         <footer>
             <div id="footer-wrapper1">
