--- a/html/portfolio/portfolio8.html
+++ b/html/portfolio/portfolio8.html
@@ -64,8 +64,17 @@
                     <button id="attack2-button">Atk2</button>
                 </div> <!--end div ui-->
                 <h3>Instructions:</h3>
-                <p>Use <strong>A and D</strong> to move the character. Use <strong>Space</strong> to <strong>Jump</strong>, <strong>Left Shift</strong> to <strong>dash</strong>, <strong>L</strong> to <strong>attack</strong>, and <strong>K</strong> for <strong>special attack</strong>. You can also use the buttons above to control your character without a keyboard.
+                <p>Use <strong>A and D</strong> to move the character. Use <strong>Space</strong> to
+                    <strong>Jump</strong>, <strong>Left Shift</strong> to <strong>dash</strong>, <strong>L</strong> to
+                    <strong>attack</strong>, and <strong>K</strong> for <strong>special attack</strong>. You can also
+                    use the buttons above to control your character without a keyboard.
                 </p>
+                <h4>Sprites credits to (sources):</h4>
+                <ul>
+                    <li><a href="https://www.deviantart.com/nikorios815/art/Cloud-Sprite-sheet-unfinished-607112056"
+                            target="_blank">NikoRios815</a>
+                    </li>
+                </ul>
         </main>
         <footer>
             <div id="footer-wrapper1">
