--- a/html/index.html
+++ b/html/index.html
@@ -49,10 +49,8 @@
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
                 <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
                     Canada.</p>
-                <p>I have recently completed the Applied Software Development certificate and the Applied Computer
-                    Information
-                    Systems certificate at British Columbia Institute of Technology (BCIT), and currently I am working
-                    towards the Computer Systems certificate.</p>
+                <p>I have recently completed the Applied Software Development certificate at British Columbia Institute of Technology (BCIT) and currently I am working
+                    towards the Applied Web Development certificate, the Applied Computer Information Systems certificate and Computer Systems certificate.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
                         Coding Capy</a></p>
                 <p>My language proficiencies:</p>
@@ -103,7 +101,8 @@
                 <article>
                     <a href="./portfolio/portfolio7.html">
                         <figure>
-                            <img src="./image/game-design1-1.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                            <img src="./image/game-design1-1.jpg" alt="Banking System Prototype II"
+                                class="portfolio-img">
                         </figure>
                         <figcaption>
                             <h3>JavaScript Smup</h3>
@@ -114,7 +113,8 @@
                 <article>
                     <a href="./portfolio/portfolio8.html">
                         <figure>
-                            <img src="./image/platform_game.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                            <img src="./image/platform_game.jpg" alt="Banking System Prototype II"
+                                class="portfolio-img">
                         </figure>
                         <figcaption>
                             <h3>JavaScript Platform</h3>
