--- a/html/index.html
+++ b/html/index.html
@@ -49,8 +49,10 @@
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
                 <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
                     Canada.</p>
-                <p>I have recently completed the Applied Software Development certificate at British Columbia Institute of Technology (BCIT) and currently I am working
-                    towards the Applied Web Development certificate, the Applied Computer Information Systems certificate and Computer Systems certificate.</p>
+                <p>I have recently completed the Applied Software Development certificate at British Columbia Institute
+                    of Technology (BCIT) and currently I am working
+                    towards the Applied Web Development certificate, the Applied Computer Information Systems
+                    certificate and Computer Systems certificate.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
                         Coding Capy</a></p>
                 <p>My language proficiencies:</p>
@@ -70,10 +72,10 @@
                             src="../html/image/javascript.png" alt="JavaScript" class="lang-icon"></a>
                     <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
                             alt="SQL" class="lang-icon"></a>
-                    <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><img
-                            src="../html/image/c-sharp.png" alt="C#" class="lang-icon"></a>
-                    <a href="https://unity.com/" target="_blank"><img src="../html/image/unity.png" alt="Unity"
-                            class="lang-icon"></a>
+                    <a href="https://nodejs.org/en" target="_blank"><img src="../html/image/nodejs.png"
+                            alt="Node.js" class="lang-icon"></a>
+                    <a href="https://react.dev/" target="_blank"><img
+                            src="../html/image/Reactjs.png" alt="React.js" class="lang-icon"></a>
 
                 </div>
                 <p>I graduated the University of British Columbia with a major in Political Science and minor in
