--- a/html/index.html
+++ b/html/index.html
@@ -90,6 +90,19 @@
             <h2>Most Recent Portfolio Projects</h2>
             <div id="current-projects-section">
                 <article>
+                    <a href="https://codingcapy.github.io/capytech-react">
+                        <figure>
+                            <img src="./image/react-project.jpg" alt="Banking System Prototype II"
+                                class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>React Front End Web Project</h3>
+                            <p>This project is a website written entirely in React that simulates the front end of
+                                Youtube.</p>
+                        </figcaption>
+                    </a>
+                </article>
+                <article>
                     <a href="./portfolio/portfolio6.html">
                         <figure>
                             <img src="./image/red_knight.jpg" alt="Banking System Prototype II" class="portfolio-img">
@@ -121,21 +134,6 @@
                         <figcaption>
                             <h3>JavaScript Platform</h3>
                             <p>Click here to play! This project is a JavaScript platform game I recently completed.</p>
-                        </figcaption>
-                    </a>
-                </article>
-                <article>
-                    <a href="./portfolio/portfolio1.html">
-                        <figure>
-                            <img src="./image/banking-sys-python.jpg" alt="Banking System Prototype II"
-                                class="portfolio-img">
-                        </figure>
-                        <figcaption>
-                            <h3>Banking System Prototype II</h3>
-                            <p>This project is a banking system prototype program written using object-oriented
-                                programming
-                                in
-                                Python.</p>
                         </figcaption>
                     </a>
                 </article>
