--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -49,6 +49,19 @@
                 <h2>Current Projects</h2>
                 <div id="current-projects-section">
                     <article>
+                        <a href="https://codingcapy.github.io/capytech-react">
+                            <figure>
+                                <img src="../image/react-project.jpg" alt="Banking System Prototype II"
+                                    class="portfolio-img">
+                            </figure>
+                            <figcaption>
+                                <h3>React Front End Web Project</h3>
+                                <p>This project is a website written entirely in React that simulates the front end of
+                                    Youtube.</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article>
                         <a href="./portfolio6.html">
                             <figure>
                                 <img src="../image/red_knight.jpg" alt="Banking System Prototype II"
@@ -82,22 +95,8 @@
                             </figure>
                             <figcaption>
                                 <h3>JavaScript Platform</h3>
-                                <p>Click here to play! This project is a JavaScript platform game I recently completed.</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article>
-                        <a href="./portfolio1.html">
-                            <figure>
-                                <img src="../image/banking-sys-python.jpg" alt="Banking System Prototype II"
-                                    class="portfolio-img">
-                            </figure>
-                            <figcaption>
-                                <h3>Banking System Prototype II</h3>
-                                <p>This project is a banking system prototype program written using object-oriented
-                                    programming
-                                    in
-                                    Python.</p>
+                                <p>Click here to play! This project is a JavaScript platform game I recently completed.
+                                </p>
                             </figcaption>
                         </a>
                     </article>
