--- a/html/portfolio/portfolio7.html
+++ b/html/portfolio/portfolio7.html
@@ -46,7 +46,6 @@
         </header>
 
         <main>
-
             <div id="portfolio-main">
                 <h1>Capytech Portfolio</h1>
                 <h2>GameProjects</h2>
@@ -81,6 +80,7 @@
                     </li>
                     <li><a href="https://www.pexels.com/photo/stars-1257860/" target="_blank">Background</a></li>
                 </ul>
+            </div>
         </main>
         <footer>
             <div id="footer-wrapper1">
