--- a/html/portfolio/portfolio8.html
+++ b/html/portfolio/portfolio8.html
@@ -75,6 +75,7 @@
                             target="_blank">NikoRios815</a>
                     </li>
                 </ul>
+            </div>
         </main>
         <footer>
             <div id="footer-wrapper1">
