--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
                 <h1>CapyTech</h1>
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
                 <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
-                    Canada.</p>
+                    Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
                 <p>I have recently completed the <strong>Applied Software Development</strong> certificate at British
                     Columbia Institute
                     of Technology (BCIT) and currently I am working
@@ -76,6 +76,10 @@
                     <a href="https://nodejs.org/en" target="_blank"><img src="../html/image/nodejs.png" alt="Node.js"
                             class="lang-icon"></a>
                     <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png" alt="React.js"
+                            class="lang-icon"></a>
+                    <a href="https://expressjs.com/" target="_blank"><img src="../html/image/expressjs.jpg" alt="React.js"
+                            class="lang-icon"></a>
+                    <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
                             class="lang-icon"></a>
 
                 </div>
