--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -49,6 +49,19 @@
                 <h2>Current Projects</h2>
                 <div id="current-projects-section">
                     <article>
+                        <a href="https://capysocialfe.onrender.com/" target="_blank">
+                            <figure>
+                                <img src="../image/capysocial.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                            </figure>
+                            <figcaption>
+                                <h3>Full Stack Web App</h3>
+                                <p>This project is a full-stack web app written in Node Express, React Vite and MongoDB that uses json web
+                                    token user authentication and allows users to post, comment, reply, and vote similar to
+                                    forums like Reddit.</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article>
                         <a href="https://codingcapy.github.io/capytech-react">
                             <figure>
                                 <img src="../image/react-project.jpg" alt="Banking System Prototype II"
