--- a/html/index.html
+++ b/html/index.html
@@ -77,8 +77,8 @@
                             class="lang-icon"></a>
                     <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png" alt="React.js"
                             class="lang-icon"></a>
-                    <a href="https://expressjs.com/" target="_blank"><img src="../html/image/expressjs.jpg" alt="React.js"
-                            class="lang-icon"></a>
+                    <a href="https://expressjs.com/" target="_blank"><img src="../html/image/expressjs.jpg"
+                            alt="React.js" class="lang-icon"></a>
                     <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
                             class="lang-icon"></a>
 
@@ -93,6 +93,19 @@
             </div>
             <h2>Most Recent Portfolio Projects</h2>
             <div id="current-projects-section">
+                <article>
+                    <a href="https://capysocialfe.onrender.com/" target="_blank">
+                        <figure>
+                            <img src="./image/capysocial.jpg" alt="Banking System Prototype II" class="portfolio-img">
+                        </figure>
+                        <figcaption>
+                            <h3>Full Stack Web App</h3>
+                            <p>This project is a full-stack web app written in Node Express, React Vite and MongoDB that uses json web
+                                token user authentication and allows users to post, comment, reply, and vote similar to
+                                forums like Reddit.</p>
+                        </figcaption>
+                    </a>
+                </article>
                 <article>
                     <a href="https://codingcapy.github.io/capytech-react">
                         <figure>
@@ -155,20 +168,6 @@
                                 shop at conventions without necessarily having to wait near her booth physically to
                                 look at her
                                 products.</p>
-                        </figcaption>
-                    </a>
-                </article>
-                <article>
-                    <a href="./portfolio/portfolio3.html">
-                        <figure>
-                            <img src="./image/banking-sys-prototype.jpg" alt="Banking System Prototype"
-                                class="portfolio-img">
-                        </figure>
-                        <figcaption>
-                            <h3>Banking System Prototype</h3>
-                            <p>Having worked for a financial institution for the past 7 years, I have decided to
-                                make a personal
-                                project of building a banking system prototype that also functions as a CRM.</p>
                         </figcaption>
                     </a>
                 </article>
