--- a/html/index.html
+++ b/html/index.html
@@ -100,14 +100,15 @@
                         </figure>
                         <figcaption>
                             <h3>Full Stack Web App</h3>
-                            <p>This project is a full-stack web app written in Node Express, React Vite and MongoDB that uses json web
+                            <p>This project is a full-stack web app written in Node Express, React Vite and MongoDB that
+                                uses json web
                                 token user authentication and allows users to post, comment, reply, and vote similar to
                                 forums like Reddit.</p>
                         </figcaption>
                     </a>
                 </article>
                 <article>
-                    <a href="https://codingcapy.github.io/capytech-react">
+                    <a href="https://codingcapy.github.io/capytech-react" target="_blank">
                         <figure>
                             <img src="./image/react-project.jpg" alt="Banking System Prototype II"
                                 class="portfolio-img">
@@ -155,7 +156,7 @@
                     </a>
                 </article>
                 <article>
-                    <a href="./portfolio/portfolio2.html">
+                    <a href="https://codingcapy.github.io/jellyfishforest/" target="_blank">
                         <figure>
                             <img src="./image/art-gallery-web-app.jpg" alt="Art Gallery Web App" class="portfolio-img">
 
