--- a/html/index.html
+++ b/html/index.html
@@ -94,7 +94,7 @@
             <h2>Most Recent Portfolio Projects</h2>
             <div id="current-projects-section">
                 <article>
-                    <a href="https://capysocialfe.onrender.com/" target="_blank">
+                    <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank">
                         <figure>
                             <img src="./image/capysocial.jpg" alt="Banking System Prototype II" class="portfolio-img">
                         </figure>
