--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -49,7 +49,7 @@
                 <h2>Current Projects</h2>
                 <div id="current-projects-section">
                     <article>
-                        <a href="https://capysocialfe.onrender.com/" target="_blank">
+                        <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank">
                             <figure>
                                 <img src="../image/capysocial.jpg" alt="Banking System Prototype II" class="portfolio-img">
                             </figure>
