--- a/html/index.html
+++ b/html/index.html
@@ -49,11 +49,11 @@
                 <img src="../html/image/text-effect.jpg" alt="Paul Neon Effect" id="paul-neon">
                 <p>Hello! My name is Paul Kim and I am a full stack developer based in Vancouver, British Columbia,
                     Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
-                <p>I have recently completed the <strong>Applied Software Development</strong> certificate at British
+                <p>I have recently completed the <strong>Applied Software Development</strong> and <strong>Applied Web Development</strong> certificates at British
                     Columbia Institute
                     of Technology (BCIT) and currently I am working
-                    towards the Applied Web Development certificate, the Applied Computer Information Systems
-                    certificate and Computer Systems certificate.</p>
+                    towards the the Applied Computer Information Systems
+                    certificate and Computer Systems Diploma concurrently.</p>
                 <p>Feel free to check out my GitHub here: <a href=" https://github.com/codingcapy" target="_blank">
                         Coding Capy</a></p>
                 <p>My language proficiencies:</p>
